--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,29 +6,25 @@ on:
       - main
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: apps/web
     steps:
-      - name: Checkout repo
+      - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Set up Node
+      - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: 18
 
       - name: Install deps
-        run: |
-          cd apps/web
-          npm install
+        run: npm install
 
-      - name: Build project
-        run: |
-          cd apps/web
-          npm run build
+      - name: Build
+        run: npm run build
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: apps/web/dist
+      - name: Deploy
+        run: npx gh-pages -d dist
