--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,9 @@ jobs:
           node-version: 18
 
       - name: Install deps
-        run: npm install
+        run: |
+          cd apps/web
+          npm install
 
       - name: Build
         run: npm run build
