--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
           npm install
 
       - name: Build
-        run: npm run build
+        run: cd apps/web && npm run build
 
       - name: Deploy
         run: npx gh-pages -d dist
