--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,9 +8,6 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: apps/web
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -21,12 +18,10 @@ jobs:
           node-version: 18
 
       - name: Install deps
-        run: |
-          cd apps/web
-          npm install
+        run: npm install
 
       - name: Build
-        run: cd apps/web && npm run build
+        run: npm run build
 
       - name: Deploy
         run: npx gh-pages -d dist
