--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,10 +18,10 @@ jobs:
           node-version: 18
 
       - name: Install deps
-        run: npm install
+        run: npm install .
 
       - name: Build
-        run: npm run build
+        run: npm run build .
 
       - name: Deploy
         run: npx gh-pages -d dist
